--- a/babylonProj/Website/index.html
+++ b/babylonProj/Website/index.html
@@ -33,7 +33,7 @@
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Elements</a>
                             <ul class="dropdown-menu">
                                 <li>
-                                    <a class="dropdown-item" href="element1.html">Element 1</a>
+                                    <a class="dropdown-item" href="babylonProj/Element01/index.html">Element 1</a>
                                 </li>
                                 <li>
                                     <a class="dropdown-item" href="element2.html">Element 2</a>
