--- a/babylonProj/Website/game.html
+++ b/babylonProj/Website/game.html
@@ -1,12 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>JSPF - Assessment Example</title>
-        <!--External CSS file-->
-        <link rel="stylesheet" href="CSS/main.css" />
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" />
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
-    </head>
-    <body>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Game Page</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            padding: 20px;
+        }
+
+        .navbar {
+            margin-bottom: 20px;
+        }
+
+        p {
+            font-size: 18px;
+            line-height: 1.6;
+        }
+    </style>
+</head>
+
+<body>
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#"><img src="assets/images/JGF_badge.png" alt="JGPF" width="60" /></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="game.html">Game</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Elements</a>
+                        <ul class="dropdown-menu">
+                            <li>
+                                <a class="dropdown-item" href="element1.html">Element 1</a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="element2.html">Element 2</a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="element3.html">Element 3</a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="element4.html">Element 4</a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="element5.html">Element 5</a>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <div class="container">
+        <h1>Welcome to My Game Page</h1>
+        <p>Hello and welcome to my game page. By exploring each of my Elements, you can see the development of my maze game.
+            These Elements showcase interesting ways to display JavaScript on a website and make interactivity fun and easy to handle!
+        </p>
+    </div>
+
+    <!-- Bootstrap JS and dependencies -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@1.16.1/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+</body>
+
+</html>
